junte todos los html en una carpeta y deje index.html por fuera

--- a/html/cena.html
+++ b/html/cena.html
@@ -29,7 +29,7 @@
         integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
         crossorigin="" />
     <!--CSS propio-->
-    <link rel="stylesheet" href="./CSS/recetas.css">
+    <link rel="stylesheet" href="../CSS/recetas.css">
 
 
 
@@ -48,7 +48,7 @@
             <div class="collapse navbar-collapse me-5 " id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex justify-content-end " style="width:100%">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./index.html"><i class="fas fa-home"></i>
+                        <a class="nav-link active" aria-current="page" href="../index.html"><i class="fas fa-home"></i>
                             Inicio</a>
                     </li>
                     <li class="nav-item">
@@ -60,13 +60,13 @@
                             Recetas
                         </a>
                         <ul class="dropdown-menu " aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item " href="desayuno.html">Desayuno</a></li>
-                            <li><a class="dropdown-item" href="almuerzo.html">Almuerzo</a></li>
+                            <li><a class="dropdown-item " href="./desayuno.html">Desayuno</a></li>
+                            <li><a class="dropdown-item" href="./almuerzo.html">Almuerzo</a></li>
                             <li><a class="dropdown-item" href="#cena">Cena</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="tiendas.html"><i class="fas fa-store-alt"></i>
+                        <a class="nav-link active" aria-current="page" href="./tiendas.html"><i class="fas fa-store-alt"></i>
                             Tiendas</a>
                     </li>
                     <li class="nav-item">
