--- a/html/login.html
+++ b/html/login.html
@@ -27,7 +27,7 @@
   integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
   crossorigin=""/>
     <!--CSS propio-->
-    <link rel="stylesheet" href="./CSS/styles.css">
+    <link rel="stylesheet" href="../CSS/styles.css">
     
 
 
@@ -68,8 +68,8 @@
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
         integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
         crossorigin=""></script>
-    <script src="./js/dieteticasCoordenadas.js"></script>
-    <script src="./js/leaflets.js"></script>
+    <script src="../js/dieteticasCoordenadas.js"></script>
+    <script src="../js/leaflets.js"></script>
 
 
 
