--- a/html/tiendas.html
+++ b/html/tiendas.html
@@ -27,7 +27,7 @@
   integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
   crossorigin=""/>
     <!--CSS propio-->
-    <link rel="stylesheet" href="./CSS/tiendas.css">
+    <link rel="stylesheet" href="../CSS/tiendas.css">
     
 
 
@@ -45,7 +45,7 @@
             <div class="collapse navbar-collapse me-5 " id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex justify-content-end " style="width:100%">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html"><i class="fas fa-home"></i>
+                        <a class="nav-link active" aria-current="page" href="../index.html"><i class="fas fa-home"></i>
                             Inicio</a>
                     </li>
                     <li class="nav-item">
@@ -57,9 +57,9 @@
                             Recetas
                         </a>
                         <ul class="dropdown-menu " aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item " href="desayuno.html">Desayuno</a></li>
-                            <li><a class="dropdown-item" href="almuerzo.html">Almuerzo</a></li>
-                            <li><a class="dropdown-item" href="cena.html">Cena</a></li>
+                            <li><a class="dropdown-item " href="./desayuno.html">Desayuno</a></li>
+                            <li><a class="dropdown-item" href="./almuerzo.html">Almuerzo</a></li>
+                            <li><a class="dropdown-item" href="./cena.html">Cena</a></li>
                         </ul>
                     </li>
                        
@@ -365,8 +365,8 @@
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
         integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
         crossorigin=""></script>
-    <script src="./js/dieteticasCoordenadas.js"></script>
-    <script src="./js/leaflets.js"></script>
+    <script src="../js/dieteticasCoordenadas.js"></script>
+    <script src="../js/leaflets.js"></script>
 
 
 
