--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="tiendas.html"><i class="fas fa-store-alt"></i>
+                        <a class="nav-link active" aria-current="page" href="./html/tiendas.html"><i class="fas fa-store-alt"></i>
                             Tiendas</a>
                     </li>
                     <li class="nav-item">
@@ -84,7 +84,7 @@
         </div>
         <div class="container">
             <nav class="login-inicio">
-                <a href="login.html">log in</a>
+                <a href="./html/login.html">log in</a>
                 <a href="signp.html">registro →</a>
             </nav>
             <div class="row min-vh-100 align-items-center">
@@ -176,7 +176,7 @@
                     </div>
                     <div class="card-body ">
 
-                        <a href="desayuno.html" class="btn">Más...</a>
+                        <a href="./html/desayuno.html" class="btn">Más...</a>
                     </div>
 
                 </div>
@@ -189,7 +189,7 @@
                     </div>
                     <div class="card-body">
 
-                        <a href="desayuno.html" class="btn">Más...</a>
+                        <a href="./html/desayuno.html" class="btn">Más...</a>
                     </div>
 
                 </div>
@@ -202,7 +202,7 @@
                     </div>
                     <div class="card-body">
 
-                        <a href="desayuno.html" class="btn">Más...</a>
+                        <a href="./html/desayuno.html" class="btn">Más...</a>
                     </div>
 
 
@@ -234,7 +234,7 @@
                     </div>
                     <div class="card-body">
 
-                        <a href="almuerzo.html" class="btn">Más...</a>
+                        <a href="./html/almuerzo.html" class="btn">Más...</a>
                     </div>
 
                 </div>
@@ -247,7 +247,7 @@
                     </div>
                     <div class="card-body">
 
-                        <a href="almuerzo.html" class="btn">Más...</a>
+                        <a href="./html/almuerzo.html" class="btn">Más...</a>
                     </div>
 
                 </div>
@@ -260,7 +260,7 @@
                     </div>
                     <div class="card-body">
 
-                        <a href="almuerzo.html" class="btn">Más...</a>
+                        <a href="./html/almuerzo.html" class="btn">Más...</a>
                     </div>
                 </div>
             </div>
@@ -286,7 +286,7 @@
                     </div>
                     <div class="card-body">
 
-                        <a href="cena.html" class="btn">Más...</a>
+                        <a href="./html/cena.html" class="btn">Más...</a>
                     </div>
 
                 </div>
@@ -298,7 +298,7 @@
                     </div>
                     <div class="card-body">
 
-                        <a href="cena.html" class="btn">Más...</a>
+                        <a href="./html/cena.html" class="btn">Más...</a>
                     </div>
 
                 </div>
@@ -311,7 +311,7 @@
                     </div>
                     <div class="card-body">
 
-                        <a href="cena.html" class="btn">Más...</a>
+                        <a href="./html/cena.html" class="btn">Más...</a>
                     </div>
 
 
@@ -332,7 +332,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
         crossorigin="anonymous"></script>
-    <script src="./JS/script.js"></script>
+    <script src="./js/script.js"></script>
 
 </body>
 
