tratando de unir el html con el mapa

--- a/html/tiendas.html
+++ b/html/tiendas.html
@@ -105,7 +105,7 @@
                     ☎️ Teléfono: 011 4902-9975
                 </p>
                 <a href="#" class="icon-link links">
-                    🔎 Open in map
+                    🔎 Ver en mapa
                 </a>
             </div>
             <div class="feature col tiendaNombre">
@@ -113,7 +113,7 @@
                 <p>🏪 Dirección: Curapaligüe 770, CABA. <br>
                     ☎️ Teléfono: 011 6954-1126</p>
                 <a href="#" class="icon-link links">
-                    🔎 Open in map
+                    🔎 Ver en mapa
                 </a>
             </div>
             <div class="feature col tiendaNombre">
@@ -121,7 +121,7 @@
                 <p>🏪 Dirección: Av. Rivadavia 8357, CABA. <br>
                     ☎️ Teléfono: 011 4672-1979 </p>
                 <a href="#" class="icon-link links">
-                    🔎 Open in map
+                    🔎 Ver en mapa
                 </a>
             </div>
             <div class="feature col tiendaNombre">
@@ -130,7 +130,7 @@
                 <p>🏪 Dirección: Viamonte 859, C1053 CABA. <br>
                     ☎️ Teléfono: 011 4322-9380 </p>
                 <a href="#" class="icon-link links">
-                    🔎 Open in map
+                    🔎 Ver en mapa
                 </a>
             </div>
             <div class="feature col tiendaNombre">
@@ -139,7 +139,7 @@
                 <p>🏪 Dirección: Av. Rivadavia 7390,CABA<br>
                     ☎️ Teléfono: Sin información</p>
                 <a href="#" class="icon-link links">
-                    🔎 Open in map
+                    🔎 Ver en mapa
                 </a>
             </div>
         </div>
@@ -153,7 +153,7 @@
                     ☎️ Teléfono: 011 4719-7600
                 </p>
                 <a href="#" class="icon-link links">
-                    🔎 Open in map
+                    🔎 Ver en mapa
                 </a>
             </div>
             <div class="feature col tiendaNombre">
@@ -162,7 +162,7 @@
                 <p>🏪 Dirección: Av. Maipú 3239, Vicente López. <br>
                     ☎️ Teléfono: 011 4799-5548</p>
                 <a href="#" class="icon-link links">
-                    🔎 Open in map
+                    🔎 Ver en mapa
                 </a>
             </div>
             <div class="feature col tiendaNombre">
@@ -171,7 +171,7 @@
                 <p>🏪 Dirección: Corrientes 681, Olivos.<br>
                     ☎️ Teléfono: 011 4711-3909</p>
                 <a href="#" class="icon-link tiendalinksNombre">
-                    🔎 Open in map
+                    🔎 Ver en mapa
                 </a>
             </div>
             <div class="feature col tiendaNombre">
@@ -180,7 +180,7 @@
                 <p>🏪 Dirección: Av. de Mayo 893, zona norte. <br>
                     ☎️ Teléfono: 011 4711-3909</p>
                 <a href="#" class="icon-link links">
-                    🔎 Open in map
+                    🔎 Ver en mapa
                 </a>
             </div>
             <div class="feature col tiendaNombre">
@@ -189,7 +189,7 @@
                 <p>🏪 Dirección: Av. Centenario 416, San Isidro.<br>
                     ☎️ Teléfono: 011 4732-0916</p>
                 <a href="#" class="icon-link links">
-                    🔎 Open in map
+                    🔎 Ver en mapa
                 </a>
             </div>
             <div class="feature col tiendaNombre">
@@ -198,7 +198,7 @@
                 <p>🏪 Dirección: Arenales 2040, Martínez.<br>
                     ☎️ Teléfono: 011 4798-2087</p>
                 <a href="#" class="icon-link links">
-                    🔎 Open in map
+                    🔎 Ver en mapa
                 </a>
             </div>
 
@@ -215,7 +215,7 @@
                     ☎️ Teléfono: Sin información.
                 </p>
                 <a href="#"class="icon-link links">
-                    🔎 Open in map
+                    🔎 Ver en mapa
                 </a>
             </div>
             <div class="feature col tiendaNombre">
@@ -224,7 +224,7 @@
                 <p>🏪 Dirección: Claudio María Joly 2888, Moreno.<br>
                     ☎️ Teléfono: 011 4144-9016</p>
                     <a href="#"class="icon-link links">
-                        🔎 Open in map
+                        🔎 Ver en mapa
                     </a>
             </div>
             <div class="feature col tiendaNombre">
@@ -233,7 +233,7 @@
                 <p>🏪 Dirección: Av. Gdor. Vergara 4088, Hurlingham.<br>
                     ☎️ Teléfono: 011 3765-8244</p>
                     <a href="#"class="icon-link links">
-                        🔎 Open in map
+                        🔎 Ver en mapa
                     </a>
             </div>
             <div class="feature col tiendaNombre">
@@ -242,7 +242,7 @@
                 <p>🏪 Dirección: Av. Gdor. Vergara 3223, Hurlingham. <br>
                     ☎️ Teléfono: 011 7395-5997</p>
                     <a href="#"class="icon-link links">
-                        🔎 Open in map
+                        🔎 Ver en mapa
                     </a>
             </div>
             <div class="feature col tiendaNombre">
@@ -251,7 +251,7 @@
                 <p>🏪 Dirección: Av. Pres. Dr. Arturo Umberto Illia 2494, San Justo.<br>
                     ☎️ Teléfono: 011 4441-2185</p>
                     <a href="#"class="icon-link links">
-                        🔎 Open in map
+                        🔎 Ver en mapa
                     </a>
             </div>
             <div class="feature col tiendaNombre">
@@ -260,7 +260,7 @@
                 <p>🏪 Dirección: República de Portugal 2450, Isidro Casanova<br>
                     ☎️ Teléfono: Sin información </p>
                     <a href="#"class="icon-link links">
-                        🔎 Open in map
+                        🔎 Ver en mapa
                     </a>
             </div>
         </div>
@@ -276,7 +276,7 @@
                     ☎️ Teléfono: 011 5976-9922
                 </p>
                 <a href="#"class="icon-link links">
-                    🔎 Open in map
+                    🔎 Ver en mapa
                 </a>
             </div>
             <div class="feature col tiendaNombre">
@@ -285,7 +285,7 @@
                 <p>🏪 Dirección: Fabián Onsari 1481, Wilde.<br>
                     ☎️ Teléfono: 011 3874-4352</p>
                     <a href="#"class="icon-link links">
-                        🔎 Open in map
+                        🔎 Ver en mapa
                     </a>
             </div>
             <div class="feature col tiendaNombre">
@@ -294,7 +294,7 @@
                 <p>🏪 Dirección: Av. Conquista del desierto 127, Ezeiza.<br>
                     ☎️ Teléfono: Sin información</p>
                     <a href="#"class="icon-link links">
-                        🔎 Open in map
+                        🔎 Ver en mapa
                     </a>
             </div>
             <div class="feature col tiendaNombre">
@@ -303,7 +303,7 @@
                 <p>🏪 Dirección: Av. 14 3161, Berazategui.<br>
                     ☎️ Teléfono: 011 4226-8833</p>
                     <a href="#"class="icon-link links">
-                        🔎 Open in map
+                        🔎 Ver en mapa
                     </a>
             </div>
             <div class="feature col tiendaNombre">
@@ -312,7 +312,7 @@
                 <p>🏪 Dirección: Av. Mitre 984, Quilmes.<br>
                     ☎️ Teléfono: 011 4224-8469</p>
                     <a href="#"class="icon-link links">
-                        🔎 Open in map
+                        🔎 Ver en mapa
                     </a>
             </div>
             <div class="feature col tiendaNombre">
@@ -321,7 +321,7 @@
                 <p>🏪 Dirección: 9 de julio 141, Bernal.<br>
                     ☎️ Teléfono: 011 7038-3762</p>
                     <a href="#"class="icon-link links">
-                        🔎 Open in map
+                        🔎 Ver en mapa
                     </a>
             </div>
 
