--- a/html/tiendas.html
+++ b/html/tiendas.html
@@ -104,7 +104,7 @@
                 <p>🏪 Dirección: Rojas 12, CABA. <br>
                     ☎️ Teléfono: 011 4902-9975
                 </p>
-                <a href="#" class="icon-link links">
+                <a href="https://g.page/dieteticarojas?share" target="_blank" class="icon-link links">
                     🔎Ver en mapa
                 </a>
             </div>
@@ -112,7 +112,7 @@
                 <h5>Gran Dietética</h5>
                 <p>🏪 Dirección: Curapaligüe 770, CABA. <br>
                     ☎️ Teléfono: 011 6954-1126</p>
-                <a href="#" class="icon-link links">
+                <a href="https://goo.gl/maps/3dBTM6gNnepbszW2A" target="_blank" class="icon-link links">
                     🔎 Ver en mapa
                 </a>
             </div>
@@ -120,7 +120,7 @@
                 <h5>La Floresta</h5>
                 <p>🏪 Dirección: Av. Rivadavia 8357, CABA. <br>
                     ☎️ Teléfono: 011 4672-1979 </p>
-                <a href="#" class="icon-link links">
+                <a href="https://goo.gl/maps/V1PrVJxSRsXPTJwc6" class="icon-link links">
                     🔎 Ver en mapa
                 </a>
             </div>
@@ -129,7 +129,7 @@
                 <h5>Dietética Viamonte</h5>
                 <p>🏪 Dirección: Viamonte 859, C1053 CABA. <br>
                     ☎️ Teléfono: 011 4322-9380 </p>
-                <a href="#" class="icon-link links">
+                <a href="https://goo.gl/maps/YSTnM4kjouPTP7B1A" target="_blank" class="icon-link links">
                     🔎 Ver en mapa
                 </a>
             </div>
@@ -138,7 +138,7 @@
                 <h5>Dieteticas Tomy</h5>
                 <p>🏪 Dirección: Av. Rivadavia 7390,CABA<br>
                     ☎️ Teléfono: Sin información</p>
-                <a href="#" class="icon-link links">
+                <a href="https://goo.gl/maps/3CXyESKQ7btdPB5fA" target="_blank" class="icon-link links">
                     🔎 Ver en mapa
                 </a>
             </div>
@@ -152,7 +152,7 @@
                 <p>🏪 Dirección: Av. Maipú 201, Vicente López. <br>
                     ☎️ Teléfono: 011 4719-7600
                 </p>
-                <a href="#" class="icon-link links">
+                <a href="https://goo.gl/maps/gBaN6b8tQGzNw2Pm6" target="_blank" class="icon-link links">
                     🔎 Ver en mapa
                 </a>
             </div>
@@ -161,7 +161,7 @@
                 <h5>Dietetica Señor Sol</h5>
                 <p>🏪 Dirección: Av. Maipú 3239, Vicente López. <br>
                     ☎️ Teléfono: 011 4799-5548</p>
-                <a href="#" class="icon-link links">
+                <a href="https://goo.gl/maps/1ovyGV2ToVjUwf4V8" target="_blank" class="icon-link links">
                     🔎 Ver en mapa
                 </a>
             </div>
@@ -170,7 +170,7 @@
                 <h5>Nutralgica</h5>
                 <p>🏪 Dirección: Corrientes 681, Olivos.<br>
                     ☎️ Teléfono: 011 4711-3909</p>
-                <a href="#" class="icon-link tiendalinksNombre">
+                <a href="https://goo.gl/maps/MR1E1yPRc313SYcKA" target="_blank" class="icon-link tiendalinksNombre">
                     🔎 Ver en mapa
                 </a>
             </div>
@@ -179,7 +179,7 @@
                 <h5>La Nueva dietética</h5>
                 <p>🏪 Dirección: Av. de Mayo 893, zona norte. <br>
                     ☎️ Teléfono: 011 4711-3909</p>
-                <a href="#" class="icon-link links">
+                <a href="https://goo.gl/maps/e9TW2FYNCNH7w19G6" target="_blank" class="icon-link links">
                     🔎 Ver en mapa
                 </a>
             </div>
@@ -188,7 +188,7 @@
                 <h5>Sanas Delícias</h5>
                 <p>🏪 Dirección: Av. Centenario 416, San Isidro.<br>
                     ☎️ Teléfono: 011 4732-0916</p>
-                <a href="#" class="icon-link links">
+                <a href="https://goo.gl/maps/vPSbHXRrrdwir92C8" target="_blank" class="icon-link links">
                     🔎 Ver en mapa
                 </a>
             </div>
@@ -197,7 +197,7 @@
                 <h5>Dietética Arenales</h5>
                 <p>🏪 Dirección: Arenales 2040, Martínez.<br>
                     ☎️ Teléfono: 011 4798-2087</p>
-                <a href="#" class="icon-link links">
+                <a href="https://goo.gl/maps/bEo9NCPih4Knq7vf6" target="_blank" class="icon-link links">
                     🔎 Ver en mapa
                 </a>
             </div>
@@ -214,7 +214,7 @@
                 <p>🏪 Dirección: Marcos de Bueno 530, Moreno.<br>
                     ☎️ Teléfono: Sin información.
                 </p>
-                <a href="#"class="icon-link links">
+                <a href="https://goo.gl/maps/6mzkSNB62EumboMq5" target="_blank"class="icon-link links">
                     🔎 Ver en mapa
                 </a>
             </div>
@@ -223,7 +223,7 @@
                 <h5>Dietética Pepita y Sesamo</h5>
                 <p>🏪 Dirección: Claudio María Joly 2888, Moreno.<br>
                     ☎️ Teléfono: 011 4144-9016</p>
-                    <a href="#"class="icon-link links">
+                    <a href="https://goo.gl/maps/YYntLgPKYpmGRsur6"class="icon-link links">
                         🔎 Ver en mapa
                     </a>
             </div>
@@ -232,7 +232,7 @@
                 <h5>Buen día, día</h5>
                 <p>🏪 Dirección: Av. Gdor. Vergara 4088, Hurlingham.<br>
                     ☎️ Teléfono: 011 3765-8244</p>
-                    <a href="#"class="icon-link links">
+                    <a href="https://goo.gl/maps/ie7PbnXaHVatoCEF8" target="_blank"class="icon-link links">
                         🔎 Ver en mapa
                     </a>
             </div>
@@ -241,7 +241,7 @@
                 <h5>Dietética La Aldea</h5>
                 <p>🏪 Dirección: Av. Gdor. Vergara 3223, Hurlingham. <br>
                     ☎️ Teléfono: 011 7395-5997</p>
-                    <a href="#"class="icon-link links">
+                    <a href="https://goo.gl/maps/Hc4fTGBELfzSafHE8" target="_blank"class="icon-link links">
                         🔎 Ver en mapa
                     </a>
             </div>
@@ -250,7 +250,7 @@
                 <h5>Dietética La Mezcla</h5>
                 <p>🏪 Dirección: Av. Pres. Dr. Arturo Umberto Illia 2494, San Justo.<br>
                     ☎️ Teléfono: 011 4441-2185</p>
-                    <a href="#"class="icon-link links">
+                    <a href="https://goo.gl/maps/dCUimStaywidHHQ97" target="_blank" class="icon-link links">
                         🔎 Ver en mapa
                     </a>
             </div>
@@ -259,7 +259,7 @@
                 <h5>Fuerza Natural Dietética</h5>
                 <p>🏪 Dirección: República de Portugal 2450, Isidro Casanova<br>
                     ☎️ Teléfono: Sin información </p>
-                    <a href="#"class="icon-link links">
+                    <a href="https://g.page/almacenfuerzanatural?share" target="_blank" class="icon-link links">
                         🔎 Ver en mapa
                     </a>
             </div>
@@ -275,7 +275,7 @@
                 <p>🏪 Dirección: Av. Eva Perón 4430, Florencio Varela.<br>
                     ☎️ Teléfono: 011 5976-9922
                 </p>
-                <a href="#"class="icon-link links">
+                <a href="https://goo.gl/maps/oeP8FuUwfac4VV2r9"class="icon-link links">
                     🔎 Ver en mapa
                 </a>
             </div>
@@ -284,7 +284,7 @@
                 <h5>Alimnat</h5>
                 <p>🏪 Dirección: Fabián Onsari 1481, Wilde.<br>
                     ☎️ Teléfono: 011 3874-4352</p>
-                    <a href="#"class="icon-link links">
+                    <a href="https://g.page/ProAlimNat?share" target="_blank" class="icon-link links">
                         🔎 Ver en mapa
                     </a>
             </div>
@@ -293,7 +293,7 @@
                 <h5>Almacén Conciente</h5>
                 <p>🏪 Dirección: Av. Conquista del desierto 127, Ezeiza.<br>
                     ☎️ Teléfono: Sin información</p>
-                    <a href="#"class="icon-link links">
+                    <a href="https://goo.gl/maps/5i7AmUSE1HHLWvVz9" target="_blank" class="icon-link links">
                         🔎 Ver en mapa
                     </a>
             </div>
@@ -302,7 +302,7 @@
                 <h5>La Naturaleza Dietética & Herborista</h5>
                 <p>🏪 Dirección: Av. 14 3161, Berazategui.<br>
                     ☎️ Teléfono: 011 4226-8833</p>
-                    <a href="#"class="icon-link links">
+                    <a href="https://g.page/camidasana?share" target="_blank"class="icon-link links">
                         🔎 Ver en mapa
                     </a>
             </div>
@@ -311,19 +311,19 @@
                 <h5>Dietética El Ceibo</h5>
                 <p>🏪 Dirección: Av. Mitre 984, Quilmes.<br>
                     ☎️ Teléfono: 011 4224-8469</p>
-                    <a href="#"class="icon-link links">
+                    <a href="https://goo.gl/maps/51oJKTz5bqQQLYD97" target="_blank" class="icon-link links">
                         🔎 Ver en mapa
                     </a>
             </div>
-            <div class="feature col tiendaNombre">
+            <!-- <div class="feature col tiendaNombre">
 
-                <h5>Manyula</h5>
-                <p>🏪 Dirección: 9 de julio 141, Bernal.<br>
-                    ☎️ Teléfono: 011 7038-3762</p>
-                    <a href="#"class="icon-link links">
+                <h5></h5>
+                <p>🏪 Dirección: .<br>
+                    ☎️ Teléfono: </p>
+                    <a href="#" target="_blank"class="icon-link links">
                         🔎 Ver en mapa
                     </a>
-            </div>
+            </div> -->
 
 
         </div>
@@ -355,6 +355,7 @@
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
         integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
         crossorigin=""></script>
+
     <script src="../js/dieteticasCoordenadas.js"></script>
     <script src="../js/leaflets.js"></script>
 
