--- a/html/almuerzo.html
+++ b/html/almuerzo.html
@@ -29,8 +29,9 @@
         integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
         crossorigin="" />
     <!--CSS propio-->
+    <link rel="stylesheet" href="../CSS/styles.css">
     <link rel="stylesheet" href="../CSS/recetas.css">
-
+    
 
 
 
@@ -84,9 +85,8 @@
     <!-----------------------ALMUERZO INICIO*------------------------------------>
     <section id="almuerzo" class="almuerzo">
         <div class=" receta">
-            <h1>Almuerzo</h1>
-
-            <h2>Premezcla para tapa de empanadas...</h2>
+            <h1>&mdash;Almuerzo&mdash;</h1>
+            <h3>Premezcla para tapa de empanadas...</h3>
             <img src="https://i.ytimg.com/vi/ktJgEvvoRhk/maxresdefault.jpg" >
             <p>La premezcla sin TACC es una mezcla que contiene harinas sin gluten y se utiliza para hacer muchas de las
                 preparaciones que vamos a tener en nuestro sitio web, por eso es importante saber como prepararlas.
@@ -97,21 +97,21 @@
                 arroz, fécula
                 de mandioca y almidon de maíz. Por supuesto no son las únicas, pero si las mas “conocidas”.
             </p>
-            <h2>Ingredientes</h2>
+            <h3>Ingredientes</h3>
             <ul>
                 <li> 400 gramos de almidon de maíz</li>
                 <li> 300 gramos de fécula de mandioca</li>
                 <li>300 gramos de harina de arroz</li>
 
             </ul>
-            <h2>Opcional puedes usar los siguientes ingredientes</h2>
+            <h3>Opcional puedes usar los siguientes ingredientes</h3>
 
             <ul>
                 <li>5 cucharadas de leche en polvo</li>
                 <li>2 cucharadas de goma xantica</li>
             </ul>
 
-            <h2>Pero, ¿Qué es la goma xantica? </h2>
+            <h3>Pero, ¿Qué es la goma xantica? </h3>
             <p>Es un polvo blanco que se suele agregar a algunas preparaciones sin TACC. Le aporta a nuestras comidas
                 humedad y
                 textura, entre otras cosas. La goma xantica nos ayuda a que nuestras recetas se parezcan a las que
@@ -135,9 +135,9 @@
        
 
         <div class="receta">
-            <h2>Tapa de empanadas</h2>
+            <h3>Tapa de empanadas</h3>
 
-            <h2>Ingredientes</h2>
+            <h3>Ingredientes</h3>
 
             <ul>
                 <li>150 gramos de premezcla sin gluten</li>
