--- a/html/tiendas.html
+++ b/html/tiendas.html
@@ -29,6 +29,8 @@
         integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
         crossorigin="" />
     <!--CSS propio-->
+    <link rel="stylesheet" href="../CSS/styles.css">
+
     <link rel="stylesheet" href="../CSS/tiendas.css">
 
 
@@ -96,12 +98,12 @@
 
 
     <div class="container px-4 py-5" id="featured-3">
-        <h2 class="pb-2 tiendasListas text-center">Dietéticas</h2>
-        <h2 class="pb-2 border-bottom tiendasListas" id="caba">CABA</h2>
+        <h2 class=" tiendasListas text-center">Dietéticas</h2>
+        <h3 class=" border-bottom tiendasListas" id="caba">CABA</h3>
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
             <div class="feature col tiendaNombre">
                 <h5>Dietética Rojas</h5>
-                <p>🏪 Dirección: Rojas 12, CABA. <br>
+                <p>🏪Dirección: Rojas 12, CABA. <br>
                     ☎️ Teléfono: 011 4902-9975
                 </p>
                 <a href="https://g.page/dieteticarojas?share" target="_blank" class="icon-link links">
@@ -110,7 +112,7 @@
             </div>
             <div class="feature col tiendaNombre">
                 <h5>Gran Dietética</h5>
-                <p>🏪 Dirección: Curapaligüe 770, CABA. <br>
+                <p>🏪Dirección: Curapaligüe 770, CABA. <br>
                     ☎️ Teléfono: 011 6954-1126</p>
                 <a href="https://goo.gl/maps/3dBTM6gNnepbszW2A" target="_blank" class="icon-link links">
                     🔎 Ver en mapa
@@ -118,7 +120,7 @@
             </div>
             <div class="feature col tiendaNombre">
                 <h5>La Floresta</h5>
-                <p>🏪 Dirección: Av. Rivadavia 8357, CABA. <br>
+                <p>🏪Dirección: Av. Rivadavia 8357, CABA. <br>
                     ☎️ Teléfono: 011 4672-1979 </p>
                 <a href="https://goo.gl/maps/V1PrVJxSRsXPTJwc6" class="icon-link links">
                     🔎 Ver en mapa
@@ -127,7 +129,7 @@
             <div class="feature col tiendaNombre">
 
                 <h5>Dietética Viamonte</h5>
-                <p>🏪 Dirección: Viamonte 859, C1053 CABA. <br>
+                <p>🏪Dirección: Viamonte 859, C1053 CABA. <br>
                     ☎️ Teléfono: 011 4322-9380 </p>
                 <a href="https://goo.gl/maps/YSTnM4kjouPTP7B1A" target="_blank" class="icon-link links">
                     🔎 Ver en mapa
@@ -136,7 +138,7 @@
             <div class="feature col tiendaNombre">
 
                 <h5>Dieteticas Tomy</h5>
-                <p>🏪 Dirección: Av. Rivadavia 7390,CABA<br>
+                <p>🏪Dirección: Av. Rivadavia 7390, CABA <br>
                     ☎️ Teléfono: Sin información</p>
                 <a href="https://goo.gl/maps/3CXyESKQ7btdPB5fA" target="_blank" class="icon-link links">
                     🔎 Ver en mapa
@@ -144,12 +146,12 @@
             </div>
         </div>
         <!--Comienzo de zona Norte-->
-        <h2 class="pb-2 border-bottom tiendasListas" id="norte">Zona Norte</h2>
+        <h3 class="pb-2 border-bottom tiendasListas" id="norte">Zona Norte</h3>
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
             <div class="feature col tiendaNombre">
 
                 <h5>Dieteticas Tomi</h5>
-                <p>🏪 Dirección: Av. Maipú 201, Vicente López. <br>
+                <p>🏪Dirección: Av. Maipú 201, Vicente López. <br>
                     ☎️ Teléfono: 011 4719-7600
                 </p>
                 <a href="https://goo.gl/maps/gBaN6b8tQGzNw2Pm6" target="_blank" class="icon-link links">
@@ -206,7 +208,7 @@
         <!--fIN zona norte-->
 
         <!--Comienzo de zona oeste-->
-        <h2 class="pb-2 border-bottom tiendasListas" id="oeste">Zona Oeste</h2>
+        <h3 class="pb-2 border-bottom tiendasListas" id="oeste">Zona Oeste</h3>
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
             <div class="feature col tiendaNombre">
 
@@ -214,7 +216,7 @@
                 <p>🏪 Dirección: Marcos de Bueno 530, Moreno.<br>
                     ☎️ Teléfono: Sin información.
                 </p>
-                <a href="https://goo.gl/maps/6mzkSNB62EumboMq5" target="_blank"class="icon-link links">
+                <a href="https://goo.gl/maps/6mzkSNB62EumboMq5" target="_blank" class="icon-link links">
                     🔎 Ver en mapa
                 </a>
             </div>
@@ -223,51 +225,51 @@
                 <h5>Dietética Pepita y Sesamo</h5>
                 <p>🏪 Dirección: Claudio María Joly 2888, Moreno.<br>
                     ☎️ Teléfono: 011 4144-9016</p>
-                    <a href="https://goo.gl/maps/YYntLgPKYpmGRsur6"class="icon-link links">
-                        🔎 Ver en mapa
-                    </a>
+                <a href="https://goo.gl/maps/YYntLgPKYpmGRsur6" class="icon-link links">
+                    🔎 Ver en mapa
+                </a>
             </div>
             <div class="feature col tiendaNombre">
 
                 <h5>Buen día, día</h5>
                 <p>🏪 Dirección: Av. Gdor. Vergara 4088, Hurlingham.<br>
                     ☎️ Teléfono: 011 3765-8244</p>
-                    <a href="https://goo.gl/maps/ie7PbnXaHVatoCEF8" target="_blank"class="icon-link links">
-                        🔎 Ver en mapa
-                    </a>
+                <a href="https://goo.gl/maps/ie7PbnXaHVatoCEF8" target="_blank" class="icon-link links">
+                    🔎 Ver en mapa
+                </a>
             </div>
             <div class="feature col tiendaNombre">
 
                 <h5>Dietética La Aldea</h5>
                 <p>🏪 Dirección: Av. Gdor. Vergara 3223, Hurlingham. <br>
                     ☎️ Teléfono: 011 7395-5997</p>
-                    <a href="https://goo.gl/maps/Hc4fTGBELfzSafHE8" target="_blank"class="icon-link links">
-                        🔎 Ver en mapa
-                    </a>
+                <a href="https://goo.gl/maps/Hc4fTGBELfzSafHE8" target="_blank" class="icon-link links">
+                    🔎 Ver en mapa
+                </a>
             </div>
             <div class="feature col tiendaNombre">
 
                 <h5>Dietética La Mezcla</h5>
                 <p>🏪 Dirección: Av. Pres. Dr. Arturo Umberto Illia 2494, San Justo.<br>
                     ☎️ Teléfono: 011 4441-2185</p>
-                    <a href="https://goo.gl/maps/dCUimStaywidHHQ97" target="_blank" class="icon-link links">
-                        🔎 Ver en mapa
-                    </a>
+                <a href="https://goo.gl/maps/dCUimStaywidHHQ97" target="_blank" class="icon-link links">
+                    🔎 Ver en mapa
+                </a>
             </div>
             <div class="feature col tiendaNombre">
 
                 <h5>Fuerza Natural Dietética</h5>
                 <p>🏪 Dirección: República de Portugal 2450, Isidro Casanova<br>
                     ☎️ Teléfono: Sin información </p>
-                    <a href="https://g.page/almacenfuerzanatural?share" target="_blank" class="icon-link links">
-                        🔎 Ver en mapa
-                    </a>
+                <a href="https://g.page/almacenfuerzanatural?share" target="_blank" class="icon-link links">
+                    🔎 Ver en mapa
+                </a>
             </div>
         </div>
         <!--Comienzo de zona Sur-->
 
 
-        <h2 class="pb-2 border-bottom tiendasListas" id="sur">Zona Sur</h2>
+        <h3 class="pb-2 border-bottom tiendasListas" id="sur">Zona Sur</h3>
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
             <div class="feature col tiendaNombre">
 
@@ -275,7 +277,7 @@
                 <p>🏪 Dirección: Av. Eva Perón 4430, Florencio Varela.<br>
                     ☎️ Teléfono: 011 5976-9922
                 </p>
-                <a href="https://goo.gl/maps/oeP8FuUwfac4VV2r9"class="icon-link links">
+                <a href="https://goo.gl/maps/oeP8FuUwfac4VV2r9" class="icon-link links">
                     🔎 Ver en mapa
                 </a>
             </div>
@@ -284,36 +286,36 @@
                 <h5>Alimnat</h5>
                 <p>🏪 Dirección: Fabián Onsari 1481, Wilde.<br>
                     ☎️ Teléfono: 011 3874-4352</p>
-                    <a href="https://g.page/ProAlimNat?share" target="_blank" class="icon-link links">
-                        🔎 Ver en mapa
-                    </a>
+                <a href="https://g.page/ProAlimNat?share" target="_blank" class="icon-link links">
+                    🔎 Ver en mapa
+                </a>
             </div>
             <div class="feature col tiendaNombre">
 
                 <h5>Almacén Conciente</h5>
                 <p>🏪 Dirección: Av. Conquista del desierto 127, Ezeiza.<br>
                     ☎️ Teléfono: Sin información</p>
-                    <a href="https://goo.gl/maps/5i7AmUSE1HHLWvVz9" target="_blank" class="icon-link links">
-                        🔎 Ver en mapa
-                    </a>
+                <a href="https://goo.gl/maps/5i7AmUSE1HHLWvVz9" target="_blank" class="icon-link links">
+                    🔎 Ver en mapa
+                </a>
             </div>
             <div class="feature col tiendaNombre">
 
                 <h5>La Naturaleza Dietética & Herborista</h5>
                 <p>🏪 Dirección: Av. 14 3161, Berazategui.<br>
                     ☎️ Teléfono: 011 4226-8833</p>
-                    <a href="https://g.page/camidasana?share" target="_blank"class="icon-link links">
-                        🔎 Ver en mapa
-                    </a>
+                <a href="https://g.page/camidasana?share" target="_blank" class="icon-link links">
+                    🔎 Ver en mapa
+                </a>
             </div>
             <div class="feature col tiendaNombre">
 
                 <h5>Dietética El Ceibo</h5>
                 <p>🏪 Dirección: Av. Mitre 984, Quilmes.<br>
                     ☎️ Teléfono: 011 4224-8469</p>
-                    <a href="https://goo.gl/maps/51oJKTz5bqQQLYD97" target="_blank" class="icon-link links">
-                        🔎 Ver en mapa
-                    </a>
+                <a href="https://goo.gl/maps/51oJKTz5bqQQLYD97" target="_blank" class="icon-link links">
+                    🔎 Ver en mapa
+                </a>
             </div>
             <!-- <div class="feature col tiendaNombre">
 
