--- a/html/tiendas.html
+++ b/html/tiendas.html
@@ -84,7 +84,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#" tabindex="-1" aria-disabled="true"> <i
+                        <a class="nav-link active" href="/contacto.html" tabindex="-1" aria-disabled="true"> <i
                                 class="fab fa-contao"></i> Contacto</a>
                     </li>
                 </ul>
