--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             Tiendas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#" tabindex="-1" aria-disabled="true"> <i
+                        <a class="nav-link active" href="/contacto.html" tabindex="-1" aria-disabled="true"> <i
                                 class="fab fa-contao"></i> Contacto</a>
                     </li>
                 </ul>
