contacto front terminado

--- a/contacto.html
+++ b/contacto.html
@@ -84,10 +84,10 @@
         <input type="text" class="formulario-input">
         <label for="" class="formulario-label">Nombre</label>
 
-        <input type="text" class="formulario-input">
+        <input type="email" class="formulario-input">
         <label for="" class="formulario-label">Correo</label>
 
-        <input type="text" class="formulario-input">
+        <input type="tel" class="formulario-input">
         <label for="" class="formulario-label">Telefono</label>
 
         <input type="text" class="formulario-input">
