arregle las secciones de recetas

--- a/public/index.html
+++ b/public/index.html
@@ -283,9 +283,8 @@
                 <div class="col-10 col-md-3 col-lg-3 col-xl-3 card">
 
                     <div class="card-header">
-                        <h4>Pan de molde</h4>
-                        <img src="https://www.hola.com/imagenes/cocina/recetas/20200402164781/pan-molde-rustico-cerveza-negra-datiles-thermomix/0-806-955/pan-integral-cerveza-negra-m.jpg"
-                            alt="">
+                        <h4>Tarta de Queso, Zucchini y Panceta sin Gluten / TACC</h4>
+                        <img src="https://srecetas.es/system/images/902/full.61293.jpg" alt="imagen de porciones de tartas de queso, zuquini y panceta">
                     </div>
                     <div class="card-body">
 
@@ -296,9 +295,8 @@
                 <div class="col-10 col-md-3 col-lg-3 col-xl-3 card">
 
                     <div class="card-header">
-                        <h4>Tarta de Queso, Zucchini y Panceta sin Gluten / TACC
-                        </h4>
-                        <img src="https://srecetas.es/system/images/902/full.61293.jpg" alt="imagen de porciones de tartas de queso, zuquini y panceta">
+                        <h4></h4>
+                        <img src="..." alt="">
                     </div>
                     <div class="card-body">
 
