arregle las secciones de recetas

--- a/public/cena.html
+++ b/public/cena.html
@@ -162,13 +162,11 @@
                             additional content. This content is a little bit longer.</p>
                     </div>
                 </div>
-            </div>
-        </div> -->
+            </div>-->
+        </div> <!--Fin de row-->
     </section>
 
-    <!-----------------------CENA FIN*------------------------------------>
-
-    <!--------------------Fin cuerpo----------------------->
+     <!--------------------Fin cuerpo----------------------->
 
     <footer class="footer mt-auto py-3 bg-dark container-fluid">
         <span class="text-muted  ms-5 ">Programa desde tu casa. Proyecto final 2021</span>
