--- a/public/desayuno.html
+++ b/public/desayuno.html
@@ -321,7 +321,7 @@
         </div><!--Fin row-->
 
     </section>
-
+<!--------------------Fin cuerpo----------------------->
     <footer class="footer mt-auto py-3 bg-dark container-fluid">
         <span class="text-muted  ms-5 ">Programa desde tu casa. Proyecto final 2021</span>
     </footer>
