--- a/public/desayuno.html
+++ b/public/desayuno.html
@@ -83,7 +83,7 @@
 
        <!-----------------------------------------CUERPO DESAYUNO-------------------------------------------->
        <section id="desayuno" class="desayuno">
-        <h1>&mdash;Desayuno&mdash;</h1>
+        <h1>&mdash;Desayuno&mdash; o &mdash;Merienda&mdash; </h1>
         <div class="row row-cols-1 row-cols-md-2 g-4">
             <div class="col receta">
                 <div class="card">
@@ -259,17 +259,39 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="col receta">
+             <div class="col receta">
                 <div class="card">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="https://t1.rg.ltmcdn.com/es/images/7/3/5/panqueques_sin_tacc_73537_orig.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
+                        <h3 class="card-title">Panqueques sin TACC</h3>
+                        <ul>   
+                            <h4>Ingredientes</h4> 
+                            <li>2 huevos</li>
+                            <li>200 gramos de harina de arroz</li>
+                            <li>250 mililitros de leche con o sin lactosa</li>
+                            <li>2 cucharadas soperas de aceite de girasol</li>
+                            <li>1 pizca de sal</li>
+                        </ul>
+
+                        <ol>
+                            <h4>Elaboración(Pasos)</h4>
+                            <li>Pon 2 huevos a batir hasta que queden espumosos. Añade un pellizco de sal.</li>
+                            <li>Añade la leche en el recipiente de los huevos. Vuelve a batir hasta que todo quede bien unificado.</li>
+                            <li>Agrega la harina de arroz sin gluten. Tamízala primero para que quede mejor y más suelta. Integra con el resto de los ingredientes hasta tener una mezcla homogénea y bastante líquida. Déjala una hora en la nevera reposando. Otra de las recetas sin gluten y con harina de arroz que más nos gustan son estas galletas con harina de arroz. ¡Anímate a prepararlas!
+
+                                Truco: El reposo es muy importante para que la harina fermente bien y se eliminen las burbujas que se forman al batir.</li>
+                            <li>Prepara la sartén antiadherente con un poco de manteca o aceite.</li>
+                            <li>Vierte la masa de los panqueques sin gluten en una botella de plástico. Haz un agujero pequeño en la tapa para que puedas dosificar mejor el producto. Echa una pequeña cantidad en la sartén y ve removiendo hasta formar una tortita fina. Baja el fuego y remueve hasta que se complete el círculo en la sartén.
+
+                                Truco: Con este método, verás que se te hará mucho más fácil la preparación de los panqueques y ensuciarás menos.</li>
+                            <li>Deja que los panqueques doren. Cuando veas que las puntas toman un color dorado sabrás que puedes voltearlas. Añade un poco más de mantequilla o aceite con cada panqueque, así evitarás que se adhieran demasiado a la sartén.</li>
+                            <li>¡Rellena tus panqueques sin TACC con lo que más te guste y disfruta!</li>
+                        </ol>                  
+
                     </div>
                 </div>
             </div>
-        </div>
+        <!--</div>
         <div class="col receta">
             <div class="card">
                 <img src="..." class="card-img-top" alt="...">
