arreglando la secciones de recetas

--- a/public/almuerzo.html
+++ b/public/almuerzo.html
@@ -85,7 +85,7 @@
     <section id="almuerzo" class="almuerzo container">
         <h1>&mdash;Almuerzo&mdash;</h1>
         <div class="row row-cols-1 row-cols-md-2 g-4">
-            <div class="col">
+            <div class="col receta">
                 <div class="card">
                     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT78m-5VoiAtcmB60FsUOuECVvEskBGynF1cDC4fKDfcKIRdda9lIUGfL3WdAGdxop2neY&usqp=CAU" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -130,7 +130,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col receta">
                 <div class="card">
                     <img src="https://i.ytimg.com/vi/ktJgEvvoRhk/maxresdefault.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
