agregando  recetas y favicon

--- a/public/contacto.html
+++ b/public/contacto.html
@@ -25,6 +25,10 @@
         integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="shortcut icon" href="./img/logo/52db179069959544738ba98e972df99b.svg " type="image/x-icon">
+   <!--Favicon-->
+   <link rel="apple-touch-icon" sizes="180x180" href="./img/apple-touch-icon.png">
+   <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
+   <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-16x16.png">
     <title>Contacto</title>
 </head>
 
