--- a/public/tiendas.html
+++ b/public/tiendas.html
@@ -28,6 +28,10 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
         integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
         crossorigin="" />
+     <!--Favicon-->
+     <link rel="apple-touch-icon" sizes="180x180" href="./img/apple-touch-icon.png">
+     <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
+     <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-16x16.png">
     <!--CSS propio-->
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/tiendas.css">
