--- a/contacto.html
+++ b/contacto.html
@@ -93,7 +93,7 @@
         <input type="text" class="formulario-input">
         <label for="" class="formulario-label">Mensaje</label>
 
-        <input type="submit" class=" btn formulario-submit">
+        <input type="submit" class=" btn formulario-submit" placeholder="Enviar">
     </form>
 
     <script src="./JS/form.js"></script>
