corrigiendo pequeñas cositas en el index

--- a/public/index.html
+++ b/public/index.html
@@ -35,14 +35,14 @@
 
     <!--Css propio-->
     <link rel="stylesheet" href="../css/styles.css">
-    <title>Guía para celiacos</title>
+    <title>Recetas para celíacos</title>
 </head>
 
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid ">
-            <a class="navbar-brand ms-5" href="#">Navbar</a>
+            <a class="navbar-brand ms-5" href="#">Recetas para celíacos</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -102,11 +102,11 @@
             </nav>
             <div class="row min-vh-100 align-items-center">
 
-                <div class="home-text">
-                    <h1> GreenFood Organic </h1>
-                    <p class="h1-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto officia cum suscipit
+                <div class="home-text ">
+                    <h1 class="mb-5"> Recetas aptas para todos </h1>
+                    <!-- <p class="h1-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto officia cum suscipit
                         tempora esse illum eos dolorem in, consequatur atque fugit. Alias praesentium officiis omnis
-                        porro corporis doloremque sed velit.</p>
+                        porro corporis doloremque sed velit.</p> -->
                     <a href="#about" class="btn btn-default">Más información...</a>
                 </div>
             </div>
