agregando descripcion en el alt de las img

--- a/public/almuerzo.html
+++ b/public/almuerzo.html
@@ -78,9 +78,9 @@
             <div class="col receta">
                 <div class="card">
                     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT78m-5VoiAtcmB60FsUOuECVvEskBGynF1cDC4fKDfcKIRdda9lIUGfL3WdAGdxop2neY&usqp=CAU"
-                        class="card-img-top" alt="...">
-                    <h3 class="card-title">&mdash;Premezcla casera&mdash; (Ver receta)</h3>
-                    <div class="card-body  toggleCard">
+                        class="card-img-top" alt="foto de premezcla casera">
+                    <h3 class="card-title">&mdash;Premezcla casera&mdash;</h3>
+                    <div class="card-body">
                         
                         <p class="card-text">La premezcla sin TACC es una mezcla que contiene harinas sin gluten y se
                             utiliza para hacer muchas de las
@@ -124,9 +124,9 @@
             </div>
             <div class="col receta">
                 <div class="card">
-                    <img src="https://i.ytimg.com/vi/ktJgEvvoRhk/maxresdefault.jpg" class="card-img-top" alt="...">
+                    <img src="https://i.ytimg.com/vi/ktJgEvvoRhk/maxresdefault.jpg" class="card-img-top" alt="foto de tapas de empanadas">
                     <h3 class="card-title">&mdash;Tapa de empanadas&mdash;</h3>
-                    <div class="card-body toggleCard">
+                    <div class="card-body">
                         
                         <ul>
                             <h4>Ingredientes</h4>
@@ -169,7 +169,7 @@
             <div class="col">
                 <div class="card">
                     <img src="https://badun.nestle.es/imgserver/v1/80/1290x742/tarta-de-cebolla-y-queso.jpg"
-                        class="card-img-top" alt="...">
+                        class="card-img-top" alt="foto de tarta de cebolla y queso">
                     <div class="card-body">
                         <h3 class="card-title">&mdash;Tarta de Queso y Cebolla sin Gluten / TACC&mdash;</h3>
 
@@ -222,7 +222,7 @@
             <div class="col">
                 <div class="card">
                     <img src="https://estaticos.serpadres.es/media/cache/1140x_thumb/uploads/images/recipe/5d09f9bf5cafe83a69f1f7f0/pizza-sin-gluten_0.jpg"
-                        class="card-img-top" alt="...">
+                        class="card-img-top" alt="foto de pizza sin gluten">
                     <div class="card-body">
                         <h3 class="card-title">&mdash;Pizza sin Gluten / TACC&mdash;</h3>
                         <ul>
