--- a/public/index.html
+++ b/public/index.html
@@ -85,11 +85,11 @@
     <section class="home-section" id="home">
         <div class="home-bg"></div>
         <!---Fondo en moviento-->
-        <div class="container">
+        <!-- <div class="container">
             <nav class="login-inicio">
                 <a href="./login.html">log in</a>
                 <a href="signp.html">registro →</a>
-            </nav>
+            </nav> -->
             <div class="row min-vh-100 align-items-center">
                 <div class="home-text ">
                     <h1 class="mb-5"> Recetas aptas para todos </h1>
@@ -119,7 +119,7 @@
             <div class="col-12">
                 <div class="about-img">
                     <div class="img-box ">
-                        <h3>Cuidándolos desde 1999</h3>
+                        <!-- <h3>Vivir sin tacc se puede</h3> -->
                         <img class="img-home"
                             src="https://www.65ymas.com/uploads/s1/11/56/94/bigstock-gluten-free-diet-concept-sel-291861787.jpeg"
                             alt="">
