--- a/public/index.html
+++ b/public/index.html
@@ -64,9 +64,9 @@
                             Recetas
                         </a>
                         <ul class="dropdown-menu " aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item " href="#desayuno">Desayuno</a></li>
-                            <li><a class="dropdown-item" href="#almuerzo">Almuerzo</a></li>
-                            <li><a class="dropdown-item" href="#cena">Cena</a></li>
+                            <li><a class="dropdown-item " href="/desayuno">Desayuno</a></li>
+                            <li><a class="dropdown-item" href="/almuerzo">Almuerzo</a></li>
+                            <li><a class="dropdown-item" href="/cena">Cena</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -165,7 +165,7 @@
                     </div>
                     <div class="card-body ">
 
-                        <a href="./desayuno.html" class="btn">Más...</a>
+                        <a href="desayuno" class="btn">Más...</a>
                     </div>
 
                 </div>
@@ -178,7 +178,7 @@
                     </div>
                     <div class="card-body">
 
-                        <a href="./desayuno.html" class="btn">Más...</a>
+                        <a href="desayuno" class="btn">Más...</a>
                     </div>
 
                 </div>
@@ -190,7 +190,7 @@
                     </div>
                     <div class="card-body">
 
-                        <a href="./desayuno.html" class="btn">Más...</a>
+                        <a href="desayuno" class="btn">Más...</a>
                     </div>
                 </div>
             </div>
