terminado en localhost db

--- a/public/index.html
+++ b/public/index.html
@@ -55,9 +55,9 @@
                         <a class="nav-link active" aria-current="page" href="/index"><i class="fas fa-home"></i>
                             Inicio</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link active" href="#sobreNosotros"><i class="fas fa-users"></i> Sobre Nosotros</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item dropdown ">
                         <a class="nav-link active dropdown-toggle" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false"> <i class="fas fa-bread-slice"></i>
@@ -97,7 +97,7 @@
                     <!-- <p class="h1-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto officia cum suscipit
                         tempora esse illum eos dolorem in, consequatur atque fugit. Alias praesentium officiis omnis
                         porro corporis doloremque sed velit.</p> -->
-                    <a href="#about" class="btn btn-default">Más información...</a>
+                    
                 </div>
             </div>
         </div>
@@ -134,7 +134,7 @@
                 <div class="about-text  mt-5 ">
                     <h3>Bienvenidos a Recetas para celíacos</h3>
                     <p>Les damos la bienvenida a nuestro blog informátivo para celiácos. En él podrán encontrar algunas recetas para hacerles la vida un poquito más sencilla. Alumnos de Programa Desde Tu Casa , reunieron sus conocimientos para desaarrollar este proyecto.  </p>
-                    <a href="#our-menu" class="btn mt-5 btn-default btn-menu">Nuestro menú</a>
+                    <a href="#our-menu" class="btn w-25 p-3 m-auto mt-3 formulario-submit ">Nuestro menú</a>
                 </div>
             </div>
         </div>
@@ -165,7 +165,7 @@
                     </div>
                     <div class="card-body ">
 
-                        <a href="desayuno" class="btn">Más...</a>
+                        <a href="/desayuno" class="btn">Ver mas</a>
                     </div>
 
                 </div>
@@ -178,7 +178,7 @@
                     </div>
                     <div class="card-body">
 
-                        <a href="desayuno" class="btn">Más...</a>
+                        <a href="/desayuno" class="btn">Ver mas</a>
                     </div>
 
                 </div>
@@ -190,7 +190,7 @@
                     </div>
                     <div class="card-body">
 
-                        <a href="desayuno" class="btn">Más...</a>
+                        <a href="/desayuno" class="btn">Ver mas</a>
                     </div>
                 </div>
             </div>
@@ -211,7 +211,7 @@
                     </div>
                     <div class="card-body">
 
-                        <a href="./almuerzo.html" class="btn">Más...</a>
+                        <a href="/almuerzo" class="btn">Ver mas</a>
                     </div>
                 </div>
                 <div class="col-10 col-md-3 col-lg-3 col-xl-3 card">
@@ -222,7 +222,7 @@
                     </div>
                     <div class="card-body">
 
-                        <a href="./almuerzo.html" class="btn">Más...</a>
+                        <a href="/almuerzo" class="btn">Ver mas</a>
                     </div>
 
                 </div>
@@ -235,7 +235,7 @@
                     </div>
                     <div class="card-body">
 
-                        <a href="./almuerzo.html" class="btn">Más...</a>
+                        <a href="/almuerzo" class="btn">Ver mas</a>
                     </div>
                 </div>
             </div>
@@ -259,7 +259,7 @@
                     </div>
                     <div class="card-body">
 
-                        <a href="./cena.html" class="btn">Más...</a>
+                        <a href="/cena" class="btn">Ver mas</a>
                     </div>
 
                 </div>
@@ -271,7 +271,7 @@
                     </div>
                     <div class="card-body">
 
-                        <a href="./cena.html" class="btn">Más...</a>
+                        <a href="/cena" class="btn">Ver mas</a>
                     </div>
                 </div>
                 <div class="col-10 col-md-3 col-lg-3 col-xl-3 card">
@@ -281,7 +281,7 @@
                             alt="">
                     </div>
                     <div class="card-body">
-                        <a href="./cena.html" class="btn">Más...</a>
+                        <a href="/cena" class="btn">Ver mas</a>
                     </div>
                 </div>
             </div>
